# cpp-playground

./: .clang-format  .gitignore  .tasks  CMakeLists.txt  README.md
apps/: CMakeLists.txt
apps/TestProject/: CMakeLists.txt  main.cpp
apps/ml/: CMakeLists.txt  ml.cpp  mnist_simple.cpp
apps/playground/: CMakeLists.txt
apps/playground/src/: fmt_test.cpp  hello.cpp  measure.cpp
dependencies/: CMakeLists.txt
env/: Dockerfile  buildimage.sh  setupenv.sh  use.sh
src/: concurrency.cpp  fmt_test.cpp  hello.cpp  measure.cpp
src/sample/: sample.cpp  sample_test.cpp
tools/: build.sh  clean.sh  config.sh
